# kv-mall-pricing-actix

./: Cargo.toml  Dockerfile  README.md
examples/: client.rs
src/: main.rs  telemetry.rs
