[package]
name = "pricing_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
tokio = { version = "1.37", features = ["full"] }

# opentelemetry
opentelemetry = { version = "0.23", default-features = false, features = ["trace"] }
opentelemetry-prometheus = { version = "0.16", optional = true }
opentelemetry-semantic-conventions = "0.16"
opentelemetry_sdk = { version = "0.23", features = ["metrics", "rt-tokio-current-thread"] }
opentelemetry-otlp = "0.16"
opentelemetry-http = "0.13"
opentelemetry-stdout = { version = "0.4", features = ["trace", "metrics"] }